Cleaning up files. Removing cpus option since docker does not place any cpu restrictions on the container.

--- a/testing/commonConfig.properties
+++ b/testing/commonConfig.properties
@@ -1,4 +1,6 @@
 # These will all be overwritten by the runtest.sh script
+# The only reason this is here is so that the testing 
+# framework doesn't throw an error.
 
 url=jdbc:postgresql://127.0.0.1:5432/dataspread_db
 dbDriver=org.postgresql.Driver
